--- a/kpurganaa/Views/Permisoes/Create.cshtml
+++ b/kpurganaa/Views/Permisoes/Create.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Permiso</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+<div class="vh-100 d-flex justify-content-center" style="background-image: url(/img/6f38d4573ea286a2.png);background-size:cover">
+    <div class="card  border-0" style="max-width: 50%; margin-top:3.5cm; max-height:45%;background-image: url(/img/descarga.png);background-size:cover">
+        <div class="card-header text-center" style="background-color:burlywood">
+            <h1>Create</h1>
+            <h4>Permiso</h4>
+        </div>
+        <form asp-action="Create" class="row card-body m-auto" style="background-color:lightgoldenrodyellow;">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NombrePermiso" class="control-label"></label>
@@ -22,15 +22,12 @@
                 <input asp-for="EstadoPermisos" class="form-control" />
                 <span asp-validation-for="EstadoPermisos" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="card-footer text-center " style="background-color:lightgoldenrodyellow;">
+                <input type="submit" value="Create" class="bi bi-file-plus btn btn-success btn-sm" />
+                <a asp-action="Index" class="bi bi-arrow-bar-left btn-danger btn  text-black btn-sm"></a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
