--- a/kpurganaa/Views/Reservas/Create.cshtml
+++ b/kpurganaa/Views/Reservas/Create.cshtml
@@ -4,66 +4,67 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Reserva</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+<div class="vh-100 d-flex justify-content-center" style="background-image: url(/img/6f38d4573ea286a2.png);background-size:cover">
+    <div class="card  border-0" style="max-width: 50%; margin-top:3cm; max-height:45%;background-image: url(/img/descarga.png);background-size:cover">
+        <div class="card-header text-center" style="background-color:burlywood">
+            <h1>Create</h1>
+            <h4>Reserva</h4>
+        </div>
+        <form asp-action="Create" class="row card-body m-auto d-flex " style="background-color:lightgoldenrodyellow;">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="FechaReserva" class="control-label"></label>
-                <input asp-for="FechaReserva" class="form-control" />
-                <span asp-validation-for="FechaReserva" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="FechaReserva" class="control-label"></label>
+                    <input asp-for="FechaReserva" class="form-control" />
+                    <span asp-validation-for="FechaReserva" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FechaInicio" class="control-label"></label>
+                    <input asp-for="FechaInicio" class="form-control" />
+                    <span asp-validation-for="FechaInicio" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FechaFin" class="control-label"></label>
+                    <input asp-for="FechaFin" class="form-control" />
+                    <span asp-validation-for="FechaFin" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="NroPersonas" class="control-label"></label>
+                    <input asp-for="NroPersonas" class="form-control" />
+                    <span asp-validation-for="NroPersonas" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MontoTotal" class="control-label"></label>
+                    <input asp-for="MontoTotal" class="form-control" />
+                    <span asp-validation-for="MontoTotal" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaInicio" class="control-label"></label>
-                <input asp-for="FechaInicio" class="form-control" />
-                <span asp-validation-for="FechaInicio" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Abono" class="control-label"></label>
+                    <input asp-for="Abono" class="form-control" />
+                    <span asp-validation-for="Abono" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="EstadoReserva" class="control-label"></label>
+                    <input asp-for="EstadoReserva" class="form-control" />
+                    <span asp-validation-for="EstadoReserva" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IdUsuario" class="control-label"></label>
+                    <select asp-for="IdUsuario" class="form-control" asp-items="ViewBag.IdUsuario"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IdPaquete" class="control-label"></label>
+                    <select asp-for="IdPaquete" class="form-control" asp-items="ViewBag.IdPaquete"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaFin" class="control-label"></label>
-                <input asp-for="FechaFin" class="form-control" />
-                <span asp-validation-for="FechaFin" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="NroPersonas" class="control-label"></label>
-                <input asp-for="NroPersonas" class="form-control" />
-                <span asp-validation-for="NroPersonas" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MontoTotal" class="control-label"></label>
-                <input asp-for="MontoTotal" class="form-control" />
-                <span asp-validation-for="MontoTotal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Abono" class="control-label"></label>
-                <input asp-for="Abono" class="form-control" />
-                <span asp-validation-for="Abono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstadoReserva" class="control-label"></label>
-                <input asp-for="EstadoReserva" class="form-control" />
-                <span asp-validation-for="EstadoReserva" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdUsuario" class="control-label"></label>
-                <select asp-for="IdUsuario" class ="form-control" asp-items="ViewBag.IdUsuario"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdPaquete" class="control-label"></label>
-                <select asp-for="IdPaquete" class ="form-control" asp-items="ViewBag.IdPaquete"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="card-footer text-center " style="background-color:lightgoldenrodyellow;">
+                <input type="submit" value="Create" class="bi bi-file-plus btn btn-success btn-sm" />
+                <a href="https://localhost:44352/reservas" class="bi bi-arrow-bar-left btn-danger btn  text-black btn-sm"></a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
