--- a/kpurganaa/Views/Shared/_Layout.cshtml
+++ b/kpurganaa/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="usuarios" asp-action="Index">Usuarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="usuarios" asp-action="iniciarSesion">iniciarSesion</a>
+                    </li>
                 </ul>
             </div>
         </nav>
