--- a/kpurganaa/Views/Usuarios/Create.cshtml
+++ b/kpurganaa/Views/Usuarios/Create.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="card-footer text-center " style="background-color:lightgoldenrodyellow;">
                 <input type="submit" value="Create" class="bi bi-file-plus btn btn-success btn-sm" />
-                <a href="https://localhost:44352/Usuarios" class="bi bi-arrow-bar-left btn-danger btn  text-black btn-sm"></a>
+                <a asp-action="Index" class="bi bi-arrow-bar-left btn-danger btn  text-black btn-sm"></a>
             </div>
         </form>
     </div>
