--- a/kpurganaa/Views/Usuarios/IniciarSesion.cshtml
+++ b/kpurganaa/Views/Usuarios/IniciarSesion.cshtml
@@ -24,6 +24,7 @@
             <div class="card-footer text-center" style="background-color: lightgoldenrodyellow;">
                 <button type="submit" class="btn btn-primary btn-sm">Iniciar Sesión</button>
                 <a href="@Url.Action("Index", "Home")" class="btn btn-danger btn-sm">Regresar</a>
+                <a href="@Url.Action("create", "usuarios")" class="btn btn-success btn-sm">Registrarse</a>
             </div>
         </form>
     </div>
