--- a/kpurganaa/Views/Usuarios/IniciarSesion.cshtml
+++ b/kpurganaa/Views/Usuarios/IniciarSesion.cshtml
@@ -25,6 +25,7 @@
                 <button type="submit" class="btn btn-primary btn-sm">Iniciar Sesión</button>
                 <a href="@Url.Action("Index", "Home")" class="btn btn-danger btn-sm">Regresar</a>
                 <a href="@Url.Action("create", "usuarios")" class="btn btn-success btn-sm">Registrarse</a>
+                <a href="@Url.Action("Recuperarclave", "usuarios")" class="btn btn-warning btn-sm">recuperarclave</a>
             </div>
         </form>
     </div>
