--- a/kpurganaa/Views/Home/Index.cshtml
+++ b/kpurganaa/Views/Home/Index.cshtml
@@ -59,24 +59,46 @@
             </p>
         </div>
         <div class="row" style="margin-top: 4cm;">
-            <div class="card   text-center col" style="padding:1rem;margin: 1rem;">
-                <img src="/img/6f38d4573ea286a2.png" class="card-img;" style="margin-left:0;"  height="300" alt="...">
+            <div class="card text-center col shadow-sm transition" style="padding:1rem; margin:1rem;">
+                <img src="/img/6f38d4573ea286a2.png" class="card-img" style="margin-left:0;" height="300" alt="...">
                 <div class="card-img-overlay" style="margin-top: 3cm;color:white">
-                    <h3 class="card-title">Habitaciones</h3>
+                    <a href="@Url.Action("index", "habitaciones")" class="card-title">Habitaciones</a>
                 </div>
             </div>
-            <div class="card text-center  col offset-1" style="padding:1rem;margin:1rem;">
-                <img src="/img/001b704a-city-15939-163e0a462f2.jpg" class="card-img"  height="300" alt="...">
+            <div class="card text-center col offset-1 shadow-sm transition" style="padding:1rem; margin:1rem;">
+                <img src="/img/001b704a-city-15939-163e0a462f2.jpg" class="card-img" height="300" alt="...">
                 <div class="card-img-overlay" style="margin-top: 3cm; color:white">
                     <h3 class="card-title">Paquetes</h3>
                 </div>
             </div>
-            <div class="card  text-center col offset-1" style="padding:1rem; margin:1rem ">
-                <img src="/img/f33575d66100db4c3830ca1f53b1efa5.jpeg" class="card-img"  height="300" alt="...">
+            <div class="card text-center col offset-1 shadow-sm transition" style="padding:1rem; margin:1rem;">
+                <img src="/img/f33575d66100db4c3830ca1f53b1efa5.jpeg" class="card-img" height="300" alt="...">
                 <div class="card-img-overlay" style="margin-top: 3cm;color:white">
-                    <h3 class="card-title ">Servicios</h3>
+                    <h3 class="card-title">Servicios</h3>
                 </div>
             </div>
         </div>
+        <div class="row" style="margin-top: 4cm;">
+            <div class="card text-center col shadow-sm transition" style="padding:1rem; margin:1rem;">
+                <img src="/img/6f38d4573ea286a2.png" class="card-img" style="margin-left:0;" height="300" alt="...">
+                <div class="card-img-overlay" style="margin-top: 3cm;color:white">
+                    <h3 class="card-title">Habitaciones</h3>
+                </div>
+            </div>
+            <div class="card text-center col offset-1 shadow-sm transition" style="padding:1rem; margin:1rem;">
+                <img src="/img/001b704a-city-15939-163e0a462f2.jpg" class="card-img" height="300" alt="...">
+                <div class="card-img-overlay" style="margin-top: 3cm; color:white">
+                    <h3 class="card-title">Paquetes</h3>
+                </div>
+            </div>
+            <div class="card text-center col offset-1 shadow-sm transition" style="padding:1rem; margin:1rem;">
+                <img src="/img/f33575d66100db4c3830ca1f53b1efa5.jpeg" class="card-img" height="300" alt="...">
+                <div class="card-img-overlay" style="margin-top: 3cm;color:white">
+                    <h3 class="card-title">Servicios</h3>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
